# scaleag-vito

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: CI.yaml  lint.yaml
notebooks/: demo_presto_few_shot_learning.ipynb  few_shot_learning.ipynb  few_shot_learning_dummy_datasets.ipynb  geomaize_demo.ipynb  inference_test.ipynb  presto_for_ds_task.ipynb
resources/: LPIS_flanders_potatoes_2022.tif  dummy_cropland.geojson  dummy_yield.geojson  inference_area_tevuren.nc  presto-ss-wc_10D.pt  presto-ss-wc_30D.pt
scripts/: presto_finetuning.py  presto_train.py
scripts/.ipynb_checkpoints/: presto_train-checkpoint.py
scripts/extractions/: extract.py
scripts/extractions/point_extractions/: extract_geometry_scaleag.py  extract_point_scaleag.py  extract_sample_scaleag.py
src/scaleagdata/: setup.py
src/scaleagdata/presto/: presto_df.py  presto_eval.py
src/scaleagdata_vito/: __init__.py
src/scaleagdata_vito/demo/: utils.py
src/scaleagdata_vito/openeo/: extract.py  extract_sample_scaleag.py  extraction_utils.py  feature_extractor.py  inference.py  inference_job.py  mapping.py  parameters.py  point_extraction.py  postporcess.py  preprocessing.py
src/scaleagdata_vito/presto/: datasets.py  datasets_prometheo.py  finetuned_eval.py  inference.py  presto_df.py  presto_eval.py  presto_utils.py  presto_utils_demo.py  utils.py
src/scaleagdata_vito/utils/: data_check.py  map.py
