[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "/dist",
  "/notebooks",
  "/scripts",
  "/bin",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scaleagdata_vito"]

[tool.hatch.version]
path = "src/scaleagdata_vito/_version.py"
pattern = "^__version__ = ['\"](?P<version>[^'\"]+)['\"]$"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "scaleag-vito"
authors = [
  { name="Giorgia Milli" },
  { name="Kristof Van Tricht" },
  { name="Christina Butsko" },
]
description = "using Presto for few-shot learning downstream tasks"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
# version = "2.0.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "catboost==1.2.5",
    "cftime",
    "geojson",  
    "geopandas",  
    "rioxarray>=0.13.0",
    "loguru>=0.7.2",
    "geojson",
    "numpy<2.0.0",
    "netcdf4<=1.6.4",
    "h5netcdf>=1.1.0",
    "openeo>=0.31.0",
    "openeo-gfmap==0.4.4",
    "prometheo @ git+https://github.com/WorldCereal/prometheo.git",
    "pytest-depends",
    "pyarrow",
    "geopandas",
    "scipy",
    "scikit-image",
    "xarray>=2022.3.0",
  ]

[project.urls]
"Homepage" = "https://github.com/ScaleAGData/scaleag-vito"
"Bug Tracker" = "https://github.com/ScaleAGData/scaleag-vito/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "matplotlib>=3.3.0",
  "wandb"
]
train = [ 
  "catboost==1.2.5",
  "scikit-learn==1.6.1",
  "torch>=2.7.0,<3.0.0",
  "pystac==1.10.1",
  "pystac-client==0.8.3"
]

notebooks = [
  "ipywidgets==8.1.3",
  "leafmap==0.35.1"
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
addopts = [
  "--import-mode=prepend",
]

[tool.isort]
profile = "black"


[tool.ruff]
# line-length = 88

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
  "E501",  # Ignore "line-too-long" issues, let black handle that.
]